# AI-MI-GENAI

./: pyproject.toml
DAY 1 - DATA STORYTELLING TITANIC SURVIVAL/: Data StoryTelling - titanic survival.ipynb  box_plot.ipynb
DAY 2/: day2.ipynb
DAY 3/: day 3 - machine learning.ipynb  kaggle.json
DAY 4 - AI in HealthCare/: AI in HealthCare.ipynb
DAY 5/: Project 5 - Customer Segmentation with Clustering.ipynb
DAY 8 - ML -1/: mnist.ipynb
NEW LIBRARIES/: OCD.ipynb
