[project]
name = "21-days-21-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "scipy-stubs>=1.16.1.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "wordcloud>=1.9.4",
]
